# Praca_Inzynierska_Kamil_C

./: README.md
description_slambot/: CMakeLists.txt  package.xml
description_slambot/config/: cartographer_config.lua  controllers_slambot.yaml  joy_config.yaml  joy_teleop.yaml  slam_toolbox_config.yaml
description_slambot/description_slambot/: publish_path_node.py  simple_diff_drive_controller.py
description_slambot/launch/: cartographer_launch.py  controllers_launch.py  gazebo_launch.py  joystick_teleop_launch.py  main_launch.py  slam_launch.py
description_slambot/rviz/: cartographer.rviz  display.rviz  slam_toolbox.rviz
description_slambot/urdf/: control_slambot.xacro  gazebo_imu_setup.xacro  gazebo_lidar_setup.xacro  gazebo_slambot.xacro  mobile_base.xacro  my_slambot.urdf.xacro  properties.xacro
description_slambot/worlds_gazebo/: small_house.world
